# iSPEC

./: .env.example  .env.vllm.dev.example  .gitignore  CODE_OF_CONDUCT.md  DESCRIPTION  LICENSE  NEWS.md  README.Rmd  README.md  alembic.ini  pyproject.toml  pytest.toml  tree_project.sh
.github/workflows/: tests.yml
R/: app_config.R  app_ui.R
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_psm_msrawfile.py  0003_experiment_project_nullable.py  0004_experiment_run_label.py  0005_auth_user_assistant_brief.py
benchmarks/: support_vllm_scenarios.json
dev/: 01_start.R  02_dev.R  03_deploy.R  run_dev.R
docs/: agent-ecology.md  agent-progress.md  api-schema.md  assistant-training.md  deployment.md  generate_api_schema_md.py  relay_cleanup_review.html  update_readme.py  vllm.md
docs/prompts/: ispec-extra.txt  ispec-system.txt
docs/schema/: schema.xlsx
inst/: golem-config.yml
scripts/: benchmark_support_vllm.py  extract_behavioral_scenarios.py  import_project1161_mspc001161.sh  import_project1427_mspc001427_by_lineage.sh  import_project1494_mspc001494_prof_phos_gsea.sh  import_project1544_mspc001544_jan2026.sh
skills/ispec-agent-scheduling/: SKILL.md
skills/ispec-assistant-db/: SKILL.md
skills/ispec-dev-make/: SKILL.md
skills/ispec-legacy-sync/: SKILL.md
skills/ispec-slack-wire/: SKILL.md
skills/ispec-support-chat/: SKILL.md
skills/ispec-tmux-monitoring/: SKILL.md
skills/slack-tmux-bridge/: SKILL.md
sql/sqlite/: init.sql
src/ispec/: __init__.py  authz.py  (+2 more)
tests/: __init__.py  conftest.py  data_generator.py
(+378 files in other folders)
