[build-system]
requires = ["setuptools", "wheel", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "iSPEC"
version = "0.1.0"
description = "A Python package for database"
authors = [{ name = "Your Name", email = "alexander.saltzman@bcm.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["requests", "uvicorn", "rich"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "numpy",
    "pandas",
    "openpyxl",
    "sqlalchemy",
    "fastapi",
    "httpx",
    "faker",
]

[project.scripts]
ispec = "ispec.cli.main:main"


[tool.setuptools]
packages = ["ispec", ]
package-dir = { "" = "src" }

[tool.pyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
strict = false
# pythonVersion = "3.8"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88

